添加用户登录信息查询

--- a/SharingPlatform/src/main/webapp/main.html
+++ b/SharingPlatform/src/main/webapp/main.html
@@ -15,7 +15,7 @@
 <link rel="stylesheet" href="static/js/ztree/css/zTreeStyle/zTreeStyle.css">
 
 <script type="text/javascript" src="static/js/jquery.min.js"></script>
-<script type="text/javascript" src="static/js/ajax.js"></script>
+<script type="text/javascript" src="static/js/ajax.js?v=2"></script>
 <script type="text/javascript" src="static/js/jqgrid/bootstrap.min.js"></script>
 <script type="text/javascript" src="static/js/jqgrid/grid.locale-cn.js"></script>
 <script type="text/javascript" src="static/js/jqgrid/jquery.jqGrid.min.js"></script>
@@ -25,12 +25,12 @@
 <script type="text/javascript" src="static/js/commMethod.js?v=1"></script>
 <script type="text/javascript" src="static/js/popup.js"></script>
 
-<script type="text/javascript" src="main.js"></script>
+<script type="text/javascript" src="main.js?v=1"></script>
 </head>
 <body>
 	
 	<div id="head" style="width: 100%;margin:auto;height:150px;background-color: #F1F1F1;">
-		<input type="hidden" name="login_uid" value="123">
+		<input type="hidden" name="login_uid" value="002FAD020A8444769FB2C57B4BAF99D0">
 	</div>
 	
 	<div align="center" id="mainDiv">
