--- a/SharingPlatform/src/main/webapp/main.html
+++ b/SharingPlatform/src/main/webapp/main.html
@@ -30,7 +30,7 @@
 <body>
 	
 	<div id="head" style="width: 100%;margin:auto;height:150px;background-color: #F1F1F1;">
-		<input type="hidden" name="login_uid" value="123">
+		<input type="hidden" name="login_uid" value="002FAD020A8444769FB2C57B4BAF99D0">
 	</div>
 	
 	<div align="center" id="mainDiv">
