--- a/SharingPlatform/src/main/webapp/main.html
+++ b/SharingPlatform/src/main/webapp/main.html
@@ -6,7 +6,7 @@
 
 <link rel="stylesheet" type="text/css" href="static/css/defaule.css?v=1">
 <link rel="stylesheet" type="text/css" href="static/css/menu.css?v=0">
-<link rel="stylesheet" type="text/css" href="static/css/table.css?v=2">
+<link rel="stylesheet" type="text/css" href="static/css/table.css?v=3">
 <link rel="stylesheet" type="text/css" href="static/css/popup.css?v=2">
 <link rel="stylesheet" href="static/js/jqgrid/bootstrap.min.css">
 <link rel="stylesheet" href="static/js/jqgrid/ui.jqgrid-bootstrap.css">
@@ -22,7 +22,7 @@
 <script type="text/javascript" src="static/js/MyDatepicker/MyDatepicker.js"></script>
 <script type="text/javascript" src="static/js/ztree/jquery.ztree.all.min.js"></script>
 <script type="text/javascript" src="static/js/MyDepTree/MyDepTree.js?v=1"></script>
-<script type="text/javascript" src="static/js/commMethod.js?v=1"></script>
+<script type="text/javascript" src="static/js/commMethod.js?v=2"></script>
 <script type="text/javascript" src="static/js/popup.js"></script>
 
 <script type="text/javascript" src="main.js?v=1"></script>
@@ -44,6 +44,8 @@
 		<div style="width:70%;height:15px;background-color: #FFFFFF"></div>
 		<div id="main" style="width: 100%;margin:auto;"></div>
 	</div>
-
+	
+	<div id="food" style="width: 100%;margin:auto;height:150px;background-color: #F1F1F1;">
+	</div>
 </body>
 </html>
