草稿状态的修改与删除功能

--- a/SharingPlatform/src/main/webapp/main.html
+++ b/SharingPlatform/src/main/webapp/main.html
@@ -23,7 +23,7 @@
 <script type="text/javascript" src="static/js/ztree/jquery.ztree.all.min.js"></script>
 <script type="text/javascript" src="static/js/MyDepTree/MyDepTree.js?v=1"></script>
 <script type="text/javascript" src="static/js/commMethod.js?v=2"></script>
-<script type="text/javascript" src="static/js/popup.js"></script>
+<script type="text/javascript" src="static/js/popup.js?v=1"></script>
 
 <script type="text/javascript" src="main.js?v=1"></script>
 </head>
