--- a/SharingPlatform/src/main/webapp/main.html
+++ b/SharingPlatform/src/main/webapp/main.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" href="static/css/defaule.css?v=1">
 <link rel="stylesheet" type="text/css" href="static/css/menu.css?v=0">
 <link rel="stylesheet" type="text/css" href="static/css/table.css?v=1">
-<link rel="stylesheet" type="text/css" href="static/css/popup.css?v=1">
+<link rel="stylesheet" type="text/css" href="static/css/popup.css?v=3">
 <link rel="stylesheet" href="static/js/jqgrid/bootstrap.min.css">
 <link rel="stylesheet" href="static/js/jqgrid/ui.jqgrid-bootstrap.css">
 <link rel="stylesheet" type="text/css" href="static/js/MyDatepicker/MyDatepicker.css">
@@ -29,7 +29,7 @@
 <script type="text/javascript" src="main.js?v=1"></script>
 </head>
 <body>
-	
+	<form id="dowLoadFileForm" method='get' target='_blank'></form>
 	<div id="head" style="width: 100%;margin:auto;height:150px;background-color: #F1F1F1;">
 		<input type="hidden" name="login_uid" value="002FAD020A8444769FB2C57B4BAF99D0">
 	</div>
