--- a/SharingPlatform/src/main/webapp/main.html
+++ b/SharingPlatform/src/main/webapp/main.html
@@ -6,8 +6,8 @@
 
 <link rel="stylesheet" type="text/css" href="static/css/defaule.css?v=1">
 <link rel="stylesheet" type="text/css" href="static/css/menu.css?v=0">
-<link rel="stylesheet" type="text/css" href="static/css/table.css?v=3">
-<link rel="stylesheet" type="text/css" href="static/css/popup.css?v=2">
+<link rel="stylesheet" type="text/css" href="static/css/table.css?v=1">
+<link rel="stylesheet" type="text/css" href="static/css/popup.css?v=3">
 <link rel="stylesheet" href="static/js/jqgrid/bootstrap.min.css">
 <link rel="stylesheet" href="static/js/jqgrid/ui.jqgrid-bootstrap.css">
 <link rel="stylesheet" type="text/css" href="static/js/MyDatepicker/MyDatepicker.css">
@@ -24,24 +24,25 @@
 <script type="text/javascript" src="static/js/MyDepTree/MyDepTree.js?v=1"></script>
 <script type="text/javascript" src="static/js/commMethod.js?v=3"></script>
 <script type="text/javascript" src="static/js/popup.js?v=2"></script>
+<script type="text/javascript" src="static/js/demandOper.js?v=0"></script>
 
 <script type="text/javascript" src="main.js?v=1"></script>
 </head>
 <body>
-	
+	<form id="dowLoadFileForm" method='get' target='_blank'></form>
 	<div id="head" style="width: 100%;margin:auto;height:150px;background-color: #F1F1F1;">
 		<input type="hidden" name="login_uid" value="002FAD020A8444769FB2C57B4BAF99D0">
 	</div>
 	
 	<div align="center" id="mainDiv">
-		<div id="mainHide" style="width:70%;height:47px;position:relative;">
+		<div id="mainHide" style="width:100%;height:47px;position:relative;">
 			<div align="center" class="menuDiv">
 				<div id="menusDiv" class="menusDiv" align="left">
 					
 				</div>
 			</div>
 		</div>
-		<div style="width:70%;height:15px;background-color: #FFFFFF"></div>
+		<div style="width:100%;height:15px;background-color: #FFFFFF"></div>
 		<div id="main" style="width: 100%;margin:auto;"></div>
 	</div>
 	
