统计页面添加筛选条件

--- a/SharingPlatform/src/main/webapp/main.html
+++ b/SharingPlatform/src/main/webapp/main.html
@@ -25,6 +25,7 @@
 <script type="text/javascript" src="static/js/commMethod.js?v=1"></script>
 <script type="text/javascript" src="static/js/popup.js?v=4"></script>
 <script type="text/javascript" src="static/js/demandOper.js?v=0"></script>
+<script type="text/javascript" src="static/js/keyCodeType.js?v=1"></script>
 
 <script type="text/javascript" src="main.js?v=2"></script>
 </head>
