--- a/SharingPlatform/src/main/webapp/main.html
+++ b/SharingPlatform/src/main/webapp/main.html
@@ -32,7 +32,7 @@
 <body>
 	<form id="dowLoadFileForm" method='get' target='_blank'></form>
 	<div id="head" style="width: 100%;margin:auto;height:150px;background-color: #F1F1F1;">
-		<input type="hidden" name="login_uid" value="DF0C2E90128348AF9B27843474E94342">
+		<input type="hidden" name="login_uid" value="10770">
 	</div>
 	
 	<div align="center" id="mainDiv">
